--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </tr>
             <tr>
                 <td>Task3</td>
-                <td><a href="bootstrap\tesk3.html">Link3</a></td>
+                <td><a href="bootstrap\task3.html">Link3</a></td>
             </tr>
             <tr>
                 <td>Task4</td>
